# Niux

./: .gitignore  Cargo.toml  README.md  flake.nix
completions/: _niux  niux.bash  niux.fish
ru/: README.md
src/: config.rs  main.rs
src/assets/: autogen_config.kdl  default_config.kdl  hook_config.kdl
src/commands/: action.rs  config.rs  dispatch.rs  hooks.rs  mod.rs  rebuild.rs  target.rs  validate.rs
src/config/: autogen.rs  hook_config.rs  mod.rs  niux_config.rs
src/ops/: config_actions.rs  edit.rs  install.rs  list.rs  mod.rs  nixos.rs  remove.rs  search.rs  uninstall.rs
src/structures/: Cli.rs  cli.rs  hook_config.rs  mod.rs  models.rs  niux_config.rs  struct_for_clap.rs
src/utils/: args_handler.rs  autodetect.rs  common.rs  interactive.rs  macros.rs  mod.rs  nixos.rs  nvd_integration.rs  privilege.rs  utils.rs
