[package]
name = "niux"
version = "26.04.1"
edition = "2024"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
knuffel = "3.2.0"
dirs = "6.0.0"
tempfile = "3.27.0"
libc = "*"
colored = "3.1.1"
shell-words = "1.1.0"
clap_complete = "4.6.2"

[[bin]]
name = "niux"
path = "src/main.rs"

[[bin]]
name = "niux-writer"
path = "src/bin/niux_writer.rs"
