[package]
name = "niux"
version = "26.4.1"
edition = "2024"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
knuffel = "3.2.0"
dirs = "6.0.0"
tempfile = "3.27.0"
libc = "*"
colored = "3.1.1"
shell-words = "1.1.0"
anyhow = "1.0.102"
pretty_env_logger = "0.5.0"
log = "0.4.29"
miette = { version = "5.10", features = ["fancy"] }

[[bin]]
name = "niux"
path = "src/main.rs"

[[bin]]
name = "niux-writer"
path = "src/bin/niux_writer.rs"
